add deploy with build e2e test
Signed-off-by: Michael Maximilien <maxim@us.ibm.com>

--- a/test/e2e/.envrc.example
+++ b/test/e2e/.envrc.example
@@ -2,3 +2,6 @@ export KNCTL_E2E_BUILD_GIT_URL=https://github.com/cppforlife/simple-app
 export KNCTL_E2E_BUILD_GIT_REVISION=master
 export KNCTL_E2E_BUILD_IMAGE=docker.io/dkalinin/test-push:latest
 export KNCTL_E2E_BUILD_SERVICE_ACCOUNT=gcr-build-bot-aug-2
+
+export KNCTL_E2E_BUILD_GIT_REVISION_V1=v1
+export KNCTL_E2E_BUILD_GIT_REVISION_V2=v2
