--- a/test/e2e/.envrc.example
+++ b/test/e2e/.envrc.example
@@ -1,3 +1,4 @@
+export KNCTL_E2E_NAMESPACE=default
 export KNCTL_E2E_BUILD_GIT_URL=https://github.com/cppforlife/simple-app
 export KNCTL_E2E_BUILD_GIT_REVISION=master
 export KNCTL_E2E_BUILD_IMAGE=docker.io/dkalinin/test-push:latest
