--- a/test/e2e/.envrc.example
+++ b/test/e2e/.envrc.example
@@ -1,8 +1,10 @@
 export KNCTL_E2E_NAMESPACE=default
+
 export KNCTL_E2E_BUILD_GIT_URL=https://github.com/cppforlife/simple-app
 export KNCTL_E2E_BUILD_GIT_REVISION=master
-export KNCTL_E2E_BUILD_IMAGE=docker.io/dkalinin/test-push:latest
-export KNCTL_E2E_BUILD_SERVICE_ACCOUNT=gcr-build-bot-aug-2
-
 export KNCTL_E2E_BUILD_GIT_REVISION_V1=v1
 export KNCTL_E2E_BUILD_GIT_REVISION_V2=v2
+
+export KNCTL_E2E_BUILD_IMAGE=docker.io/dkalinin/simple-app:latest
+export KNCTL_E2E_BUILD_DOCKER_USERNAME=
+export KNCTL_E2E_BUILD_DOCKER_PASSWORD=
