--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -56,7 +56,8 @@ jobs:
         KUBECONFIG_CONTENTS: ((kubeconfig))
         KNCTL_E2E_BUILD_GIT_URL: https://github.com/cppforlife/simple-app
         KNCTL_E2E_BUILD_GIT_REVISION: master
-        KNCTL_E2E_BUILD_IMAGE: docker.io/dkalinin/simple-app:latest
+        KNCTL_E2E_BUILD_PUBLIC_IMAGE: docker.io/dkalinin/simple-app:latest
+        KNCTL_E2E_BUILD_PRIVATE_IMAGE: docker.io/dkalinin/test-push:latest
         KNCTL_E2E_BUILD_DOCKER_USERNAME: ((docker_username))
         KNCTL_E2E_BUILD_DOCKER_PASSWORD: ((docker_password))
         KNCTL_E2E_BUILD_GIT_REVISION_V1: v1
