--- a/test/e2e/.envrc.example
+++ b/test/e2e/.envrc.example
@@ -5,6 +5,12 @@ export KNCTL_E2E_BUILD_GIT_REVISION=master
 export KNCTL_E2E_BUILD_GIT_REVISION_V1=v1
 export KNCTL_E2E_BUILD_GIT_REVISION_V2=v2
 
+export KNCTL_E2E_BUILD_PRIVATE_GIT_URL=git@github.com:cppforlife/simple-app-private
+export KNCTL_E2E_BUILD_PRIVATE_GIT_SSH_PULL_KEY=
+export KNCTL_E2E_BUILD_PRIVATE_GIT_REVISION=master
+export KNCTL_E2E_BUILD_PRIVATE_GIT_REVISION_V1=v1
+export KNCTL_E2E_BUILD_PRIVATE_GIT_REVISION_V2=v2
+
 export KNCTL_E2E_BUILD_PUBLIC_IMAGE=docker.io/dkalinin/simple-app:latest
 export KNCTL_E2E_BUILD_PRIVATE_IMAGE=docker.io/dkalinin/test-push:latest
 export KNCTL_E2E_BUILD_DOCKER_USERNAME=
