--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -54,14 +54,22 @@ jobs:
           version: xenial
       params:
         KUBECONFIG_CONTENTS: ((kubeconfig))
+
         KNCTL_E2E_BUILD_GIT_URL: https://github.com/cppforlife/simple-app
         KNCTL_E2E_BUILD_GIT_REVISION: master
+        KNCTL_E2E_BUILD_GIT_REVISION_V1: v1
+        KNCTL_E2E_BUILD_GIT_REVISION_V2: v2
+
+        KNCTL_E2E_BUILD_PRIVATE_GIT_URL: git@github.com:cppforlife/simple-app-private
+        KNCTL_E2E_BUILD_PRIVATE_GIT_SSH_PULL_KEY: ((private_git_ssh_pull_key))
+        KNCTL_E2E_BUILD_PRIVATE_GIT_REVISION: master
+        KNCTL_E2E_BUILD_PRIVATE_GIT_REVISION_V1: v1
+        KNCTL_E2E_BUILD_PRIVATE_GIT_REVISION_V2: v2
+
         KNCTL_E2E_BUILD_PUBLIC_IMAGE: docker.io/dkalinin/simple-app:latest
         KNCTL_E2E_BUILD_PRIVATE_IMAGE: docker.io/dkalinin/test-push:latest
         KNCTL_E2E_BUILD_DOCKER_USERNAME: ((docker_username))
-        KNCTL_E2E_BUILD_DOCKER_PASSWORD: ((docker_password))
-        KNCTL_E2E_BUILD_GIT_REVISION_V1: v1
-        KNCTL_E2E_BUILD_GIT_REVISION_V2: v2
+        KNCTL_E2E_BUILD_DOCKER_PASSWORD: ((docker_password))        
       run:
         path: /bin/bash
         args:
