vendor: fix k8s.io/code-generator dep warning
log:
  Warning: the following project(s) have [[constraint]] stanzas in Gopkg.toml:
    ✗  k8s.io/code-generator

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -6,7 +6,7 @@
   name = "k8s.io/apimachinery"
   version = "kubernetes-1.10.0"
 
-[[constraint]]
+[[override]]
   name = "k8s.io/code-generator"
   version = "kubernetes-1.10.0"
 
