run e2e tests serially

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -42,6 +42,7 @@ jobs:
         path: gopath/src/github.com/cppforlife/knctl
 
 - name: e2e-tests
+  serial: true
   plan:
   - get: e2e-tests-interval
     trigger: true
