--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -106,7 +106,7 @@ jobs:
           ln -s $PWD/knctl /usr/local/bin/knctl
 
           export KNCTL_NAMESPACE=$(date +%s%N | sha256sum | cut -f1 -d' ' | head -c 32)
-          knctl namespace create
+          kubectl create ns $KNCTL_NAMESPACE
 
           function finish {
             kubectl delete ns $KNCTL_NAMESPACE
