--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,6 +22,10 @@
   name = "github.com/knative/build"
   version = "v0.5.0"
 
+[[constraint]]
+  name = "github.com/ghodss/yaml"
+  version = "v1.0.0"
+
 [prune]
   go-tests = true
   unused-packages = true
